[package]
name = "nine-mens-morris-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
clap = { version = "4.4.8", features = ["derive"] }
futures-util = "0.3.29"
lazy_static = "1.4.0"
log = "0.4.20"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
simple_logger = "4.2.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20.1"
